2004-03-06  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Entity.cpp, Eris/Entity.h: Make getProperty() member function
	  const.

2004-03-04  Al Riddoch  <alriddoch@zepler.org>

	* Bump the interface version so runtime libs for transitional
	  don't interfere with stable.

	* Eris/Metaserver.cpp, Eris/Metaserver.h: Add compatability calls
	  with development Eris so we can push ahead with UI features
	  to test development Eris.

Thursday, 5th February 2004, Al Riddoch <alriddoch@zepler.org>

	* Update dependencies and header list in the rpm spec.

	* Add a few EXTRA_DIST files, include spec, and pgxproj files.

	* Release 1.1.1, interface version 1.0.0

Thursday, 5th February 2004, James Turner

    * Fix duplicate characters in the Player's list, by discarding
      duplicate SIGHTs and locking out calls to refreshCharacterInfo while
      a refresh is already in progress
    * Switch the internal character storage to be a map, keyed by entity ID,
      and make the accessor method (Player::getCharacters()) return a
      const reference.
    * Various other whitespace changes in Player.cpp
    * Bump version to 1.1.1 in anticipation of release
    * Set required WFMath version to 0.3.3 for coordinate conversion helpers
    
Saturday, 24th January 2004, Al Riddoch <alriddoch@zepler.org>

	* Eris/UIFactory.h, test/testUtils.cpp: Move cassert includes
	  around a bit, for fun and profit.

Thursday, 22nd January 2004, Al Riddoch <alriddoch@zepler.org>

	* Eris/Exceptions.h Eris/Exceptions.cpp: New files to contain
	  exception class declarations and definitions.

	* Eris/Types.h: Remove exceptions, and clean up types.

	* Re-organise includes to use new exceptions header.

Thursday, 22th January, Ron Steinke <rsteinke@w-link.net>

	* Remove ::Instantiate() calls from test/*

Thursday, 22nd January 2004, James Turner <james@worldforge.org>

    * Remove use of deprecated ::Instantiate() calls
    * Require Atlas-C++ 0.4.93 (latest transitional)
